--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.8.0"
   },
   "browserslist": {
     "production": [
@@ -29,5 +28,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
