--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.13.1",
     "cor": "^0.0.0",
     "cors": "^2.8.5",
     "react": "^18.2.0",
